@@ -5,4 +5,8 @@ files into the root directory as sudo.
 
 Change ownerships of /data/gbdb, /data/trash and /data/userdata to www-data and /data/mysql to mysql
 
+This tree does not include the trash cleaner binaries as they are > 5MB.
+
 All other changes of the box are documented in root/changes.txt
+
+The red box clipart is from http://www.clker.com/clipart-14656.html
