@@ -1,0 +1,3 @@
+body.hgTracks {
+        background: #ebf3fb;
+}
